more swagger methods added; prepairing to Passport implementation
