# app/Http/Swagger/Responses/ReviewsSummaryResponse.php
@@ -1,0 +1,16 @@
+<?php
+
+namespace App\Http\Swagger\Responses;
+
+use OpenApi\Attributes as OA;
+
+#[OA\Response(
+    response: 'ReviewsSummaryResponse',
+    description: 'Отзывы',
+    content: new OA\JsonContent(
+        ref: '#/components/schemas/ReviewSummaryCollection'
+    )
+)]
+class ReviewsSummaryResponse
+{
+}
